# rules_eval

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
eval/: defs.bzl  macros.bzl
eval/agent/: BUILD.bazel  agent.bzl  providers.bzl
eval/agent/builtin/: binary.bzl  claude_code.bzl  codex.bzl  nop.bzl  oracle.bzl
eval/aggregate/: BUILD.bazel
eval/eval/: BUILD.bazel  eval_run.bzl  eval_suite.bzl  providers.bzl
eval/private/: BUILD.bazel  aggregator.py  eval_runner.py
eval/task/: BUILD.bazel  providers.bzl  task.bzl
examples/: BUILD.bazel
examples/agents/: BUILD.bazel  echo_agent.go  nanocode_agent.py
examples/tasks/hello_world/: BUILD.bazel  instruction.md
examples/tasks/hello_world/solution/: solve.sh
examples/tasks/hello_world/tests/: test.sh
flag/: BUILD.bazel
toolchains/: BUILD.bazel
