"""Bazel module for rules_eval - AI agent evaluation framework."""

module(
    name = "rules_eval",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Agent toolchains
bazel_dep(name = "rules_claude", version = "0.1.0")
git_override(
    module_name = "rules_claude",
    remote = "https://github.com/buildbuddy-io/rules_claude.git",
    commit = "1c9e3bf914070d790c29220487c0a6a776ca29d5",
)
bazel_dep(name = "rules_codex", version = "0.1.0")
git_override(
    module_name = "rules_codex",
    remote = "https://github.com/buildbuddy-io/rules_codex.git",
    commit = "6311d41e26464de559061bd056fb04b6f29eada0",
)
