load("//eval:defs.bzl", "eval_run", "eval_suite", "eval_matrix")

# Individual evaluation runs

# Test with nop agent (for infrastructure testing)
eval_run(
    name = "hello_world_nop",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:nop",
)

# Test with Claude Code (Sonnet)
eval_run(
    name = "hello_world_claude",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:claude_code",
)

# Test with Claude Code (Opus)
eval_run(
    name = "hello_world_opus",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:claude_code_opus",
)

# Suite grouping - run with `bazel run :hello_world_all`
eval_suite(
    name = "hello_world_all",
    runs = [
        ":hello_world_nop",
        ":hello_world_claude",
        ":hello_world_opus",
    ],
)

# Matrix evaluation - run with `bazel run :full_eval`
eval_matrix(
    name = "full_eval",
    tasks = [
        "//examples/tasks/hello_world",
    ],
    agents = [
        "//examples/agents:claude_code",
    ],
    models = [
        "claude-sonnet-4-20250514",
        "claude-opus-4-20250514",
    ],
)
