load("//eval:defs.bzl", "eval_run", "eval_suite", "eval_matrix")

# Individual evaluation runs

# Test with nop agent (for infrastructure testing)
eval_run(
    name = "hello_world_nop",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:nop",
)

# Test with oracle agent (verifies solution works)
eval_run(
    name = "hello_world_oracle",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:oracle",
)

# Test with multiple runs (demonstrates caching)
eval_run(
    name = "hello_world_nop_3x",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:nop",
    run_count = 3,
)

# Test with Claude Code (Sonnet)
eval_run(
    name = "hello_world_claude",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:claude_code",
)

# Test with Claude Code (Opus)
eval_run(
    name = "hello_world_opus",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:claude_code_opus",
)

# Test with Codex
eval_run(
    name = "hello_world_codex",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:codex",
)

# Test with echo agent (example binary_agent)
eval_run(
    name = "hello_world_echo",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:echo",
)

# Test with nanocode agent
eval_run(
    name = "hello_world_nanocode",
    task = "//examples/tasks/hello_world",
    agent = "//examples/agents:nanocode",
)

# Suite grouping - run with `bazel run :hello_world_all`
eval_suite(
    name = "hello_world_all",
    runs = [
        ":hello_world_oracle",
        ":hello_world_nop",
        ":hello_world_claude",
        ":hello_world_opus",
        ":hello_world_codex",
        ":hello_world_echo",
        ":hello_world_nanocode",
    ],
)

# Matrix evaluation - run with `bazel run :full_eval`
eval_matrix(
    name = "full_eval",
    tasks = [
        "//examples/tasks/hello_world",
    ],
    agents = [
        "//examples/agents:claude_code",
    ],
    models = [
        "claude-sonnet-4-20250514",
        "claude-opus-4-20250514",
    ],
)
